--- a/.github/workflows/reF1nd.yml
+++ b/.github/workflows/reF1nd.yml
@@ -15,7 +15,7 @@ jobs:
       - name: Checkout official sing-box repository
         uses: actions/checkout@v4
         with:
-          repository: 'reF1nd/sing-box'
+          repository: reF1nd/sing-box
           ref: ${{ github.event.inputs.version }}
 
       - name: Set up Go
@@ -23,13 +23,24 @@ jobs:
         with:
           go-version: '1.22'
 
+      - name: Derive versioned output name
+        id: ver
+        run: |
+          VERSION=${{ github.event.inputs.version }}
+          SHORT_SHA=$(git rev-parse --short HEAD)
+          OUT="sing-box-linux-arm64-${VERSION}-${SHORT_SHA}"
+          echo "VERSION=$VERSION" >> "$GITHUB_ENV"
+          echo "SHORT_SHA=$SHORT_SHA" >> "$GITHUB_ENV"
+          echo "OUT=$OUT" >> "$GITHUB_ENV"
+          echo "out=$OUT" >> "$GITHUB_OUTPUT"
+
       - name: Build sing-box for arm64
         env:
           CGO_ENABLED: 0
           GOOS: linux
           GOARCH: arm64
         run: |
-          go build -v -o sing-box-linux-arm64 -trimpath \
+          go build -v -o "${OUT}" -trimpath \
             -ldflags="-s -w" \
             -tags="with_quic with_clash_api" \
             ./cmd/sing-box
@@ -38,4 +49,4 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: sing-box-minimal-${{ github.event.inputs.version }}-arm64
-          path: sing-box-linux-arm64
+          path: ${{ steps.ver.outputs.out }}
