--- a/.github/workflows/reF1nd.yml
+++ b/.github/workflows/reF1nd.yml
@@ -11,28 +11,37 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
     steps:
       - name: Checkout official sing-box repository
         uses: actions/checkout@v4
         with:
           repository: reF1nd/sing-box
           ref: ${{ github.event.inputs.version }}
+          fetch-depth: 1
 
       - name: Set up Go
         uses: actions/setup-go@v5
         with:
           go-version: '1.22'
 
-      - name: Derive versioned output name
-        id: ver
+      - name: Derive versioned names
+        id: meta
+        shell: bash
         run: |
-          VERSION=${{ github.event.inputs.version }}
-          SHORT_SHA=$(git rev-parse --short HEAD)
+          VERSION="${{ github.event.inputs.version }}"
+          SHORT_SHA="$(git rev-parse --short HEAD)"
           OUT="sing-box-linux-arm64-${VERSION}-${SHORT_SHA}"
+          TAG="sing-box-${VERSION}-${SHORT_SHA}"
+
           echo "VERSION=$VERSION" >> "$GITHUB_ENV"
           echo "SHORT_SHA=$SHORT_SHA" >> "$GITHUB_ENV"
           echo "OUT=$OUT" >> "$GITHUB_ENV"
+          echo "TAG=$TAG" >> "$GITHUB_ENV"
+
           echo "out=$OUT" >> "$GITHUB_OUTPUT"
+          echo "tag=$TAG" >> "$GITHUB_OUTPUT"
 
       - name: Build sing-box for arm64
         env:
@@ -45,8 +54,28 @@ jobs:
             -tags="with_quic with_clash_api" \
             ./cmd/sing-box
 
-      - name: Upload Artifact
+      - name: Generate checksums
+        run: |
+          sha256sum "${OUT}" > "${OUT}.sha256"
+
+      - name: Upload Artifact (optional)
         uses: actions/upload-artifact@v4
         with:
-          name: sing-box-minimal-${{ github.event.inputs.version }}-arm64
-          path: ${{ steps.ver.outputs.out }}
+          name: sing-box-minimal-${{ env.VERSION }}-arm64-${{ env.SHORT_SHA }}
+          path: |
+            ${{ env.OUT }}
+            ${{ env.OUT }}.sha256
+
+      - name: Create GitHub Release and upload assets
+        uses: softprops/action-gh-release@v2
+        with:
+          tag_name: ${{ env.TAG }}
+          name: sing-box minimal ${{ env.VERSION }} (${{ env.SHORT_SHA }})
+          body: |
+            - Source: reF1nd/sing-box @ ${{ env.VERSION }} (${{ env.SHORT_SHA }})
+            - GOOS/GOARCH: linux/arm64
+            - Tags: with_quic with_clash_api
+          prerelease: true
+          files: |
+            ${{ env.OUT }}
+            ${{ env.OUT }}.sha256
