--- a/.github/workflows/reF1nd.yml
+++ b/.github/workflows/reF1nd.yml
@@ -118,13 +118,13 @@ jobs:
           VERSION=""
           # 1) 当前提交对应的 tag（兼容轻量/注解 tag）
           VERSION=$(git ls-remote --tags "${{ steps.prep.outputs.upstream_repo }}" \
-            | awk -v sha="${UPSTREAM_SHA}" '\$1==sha{print \$2}' \
+            | awk -v sha="${UPSTREAM_SHA}" '$1==sha{print $2}' \
             | sed -E 's|refs/tags/||; s|\^\{\}||' \
             | head -n1)
           # 2) 无精确匹配则取仓库最新 v* tag
           if [ -z "$VERSION" ]; then
             VERSION=$(git ls-remote --tags "${{ steps.prep.outputs.upstream_repo }}" 'refs/tags/v*' \
-              | awk '{print \$2}' \
+              | awk '{print $2}' \
               | sed -E 's|refs/tags/||; s|\^\{\}||' \
               | sort -V | tail -n1)
           fi
