--- a/.github/workflows/reF1nd.yml
+++ b/.github/workflows/reF1nd.yml
@@ -5,8 +5,14 @@ on:
     inputs:
       version:
         description: 'sing-box version (tag/branch) to build'
+        type: string
         required: false
         default: 'reF1nd-main'
+      force:
+        description: 'Force rebuild even if unchanged'
+        type: boolean
+        required: false
+        default: false
   schedule:
     - cron: '0 0 * * *'
   repository_dispatch:
@@ -31,40 +37,50 @@ jobs:
           else
             REF="reF1nd-main"
           fi
+          FORCE="false"
+          if [ "${{ github.event_name }}" = "workflow_dispatch" ] && [ "${{ github.event.inputs.force }}" = "true" ]; then
+            FORCE="true"
+          fi
           echo "UPSTREAM_REPO=$UPSTREAM_REPO" >> "$GITHUB_ENV"
-          echo "REF=$REF"                     >> "$GITHUB_ENV"
-
+          echo "REF=$REF" >> "$GITHUB_ENV"
+          echo "FORCE=$FORCE" >> "$GITHUB_ENV"
+          echo "ref=$REF" >> "$GITHUB_OUTPUT"
+          echo "upstream_repo=$UPSTREAM_REPO" >> "$GITHUB_OUTPUT"
+          echo "force=$FORCE" >> "$GITHUB_OUTPUT"
       - name: Resolve upstream commit SHA
         id: upstream
         shell: bash
         run: |
           set -e
-          SHA=$(git ls-remote --exit-code --heads "$UPSTREAM_REPO" "refs/heads/${REF}" | cut -f1) || true
+          SHA=$(git ls-remote --exit-code --heads "${{ steps.prep.outputs.upstream_repo }}" "refs/heads/${REF}" | cut -f1) || true
           if [ -z "$SHA" ]; then
-            SHA=$(git ls-remote --exit-code --tags "$UPSTREAM_REPO" "refs/tags/${REF}^{}" | cut -f1) || true
+            SHA=$(git ls-remote --exit-code --tags "${{ steps.prep.outputs.upstream_repo }}" "refs/tags/${REF}^{}" | cut -f1) || true
           fi
           if [ -z "$SHA" ]; then
-            SHA=$(git ls-remote "$UPSTREAM_REPO" HEAD | cut -f1)
+            SHA=$(git ls-remote "${{ steps.prep.outputs.upstream_repo }}" HEAD | cut -f1)
           fi
           SHORT_SHA="${SHA:0:7}"
-          echo "UPSTREAM_SHA=$SHA"    >> "$GITHUB_ENV"
+          echo "UPSTREAM_SHA=$SHA" >> "$GITHUB_ENV"
           echo "SHORT_SHA=$SHORT_SHA" >> "$GITHUB_ENV"
-          echo "sha=$SHA"             >> "$GITHUB_OUTPUT"
-          echo "short=$SHORT_SHA"     >> "$GITHUB_OUTPUT"
-
+          echo "sha=$SHA" >> "$GITHUB_OUTPUT"
+          echo "short=$SHORT_SHA" >> "$GITHUB_OUTPUT"
       - name: Restore last processed state
         id: cache-restore
         uses: actions/cache/restore@v3
         with:
-          path: upstream_state/${{ env.REF }}
-          key: singbox-state-${{ env.REF }}-${{ env.UPSTREAM_SHA }}
+          path: upstream_state/${{ steps.prep.outputs.ref }}
+          key: singbox-state-${{ steps.prep.outputs.ref }}-${{ steps.upstream.outputs.sha }}
           restore-keys: |
-            singbox-state-${{ env.REF }}-
-
+            singbox-state-${{ steps.prep.outputs.ref }}-
       - name: Decide if build is needed
         id: decide
         shell: bash
         run: |
+          if [ "$FORCE" = "true" ]; then
+            echo "changed=true" >> "$GITHUB_OUTPUT"
+            echo "Manual force build requested."
+            exit 0
+          fi
           mkdir -p "upstream_state/${REF}"
           PREV=""
           [ -f "upstream_state/${REF}/sha.txt" ] && PREV=$(cat "upstream_state/${REF}/sha.txt")
@@ -75,13 +91,12 @@ jobs:
             echo "changed=true" >> "$GITHUB_OUTPUT"
             echo "Upstream changed from '$PREV' to '${UPSTREAM_SHA}'. Building..."
           fi
-
       - name: Checkout official sing-box repository at resolved commit
         if: steps.decide.outputs.changed == 'true'
         uses: actions/checkout@v4
         with:
           repository: reF1nd/sing-box
-          ref: ${{ env.UPSTREAM_SHA }}
+          ref: ${{ steps.upstream.outputs.sha }}
           fetch-depth: 1
 
       - name: Set up Go
@@ -90,63 +105,75 @@ jobs:
         with:
           go-version: '1.22'
 
-      - name: Derive versioned names
+      - name: Derive version and names
         if: steps.decide.outputs.changed == 'true'
         id: meta
         shell: bash
         run: |
-          VERSION="${REF}"
+          # 优先从源码解析 vX.Y.Z（CoreVersion/Version）
+          VERSION=$(grep -R -h -E '(const|var)[[:space:]]+(CoreVersion|Version)[[:space:]]*=[[:space:]]*"(v[0-9]+\.[0-9]+\.[0-9][^"]*)"' --include="*.go" . 2>/dev/null | head -n1 | sed -E 's/.*"(v[^"]+)".*/\1/') || true
+          # 若未解析到，则取最近 tag
+          if [ -z "$VERSION" ]; then
+            git fetch --tags --force --prune || true
+            git fetch --depth=0 origin || true
+            VERSION=$(git describe --tags --match 'v*' --abbrev=0 2>/dev/null || true)
+          fi
+          # 再不行，退回分支名
+          if [ -z "$VERSION" ]; then
+            VERSION="${REF}"
+          fi
           OUT="sing-box-linux-arm64-${VERSION}-${SHORT_SHA}"
+          ZIP="${OUT}.zip"
           TAG="sing-box-${VERSION}-${SHORT_SHA}"
           echo "VERSION=$VERSION" >> "$GITHUB_ENV"
-          echo "OUT=$OUT"         >> "$GITHUB_ENV"
-          echo "TAG=$TAG"         >> "$GITHUB_ENV"
+          echo "OUT=$OUT" >> "$GITHUB_ENV"
+          echo "ZIP=$ZIP" >> "$GITHUB_ENV"
+          echo "TAG=$TAG" >> "$GITHUB_ENV"
+          echo "version=$VERSION" >> "$GITHUB_OUTPUT"
           echo "out=$OUT" >> "$GITHUB_OUTPUT"
+          echo "zip=$ZIP" >> "$GITHUB_OUTPUT"
           echo "tag=$TAG" >> "$GITHUB_OUTPUT"
-
-      - name: Detect version vars and compose ldflags
+      - name: Detect ldflags
         if: steps.decide.outputs.changed == 'true'
         id: ldflags
         shell: bash
         run: |
           set -e
-          MODULE=$(go list -m -f '{{.Path}}')
+          MODULE=$(go list -m)
           PKG_BUILD="$MODULE/cmd/internal/build"
           PKG_CONST="$MODULE/constant"
           LDFLAGS_EXTRA=""
-          add_flag() { LDFLAGS_EXTRA="$LDFLAGS_EXTRA -X \$1=\$2"; }
+          # 仅在存在 var 时注入，避免覆盖源码中的 const 版本
+          if [ -d constant ]; then
+            if grep -R -q -E 'var[[:space:]]+CoreVersion\b' constant; then
+              LDFLAGS_EXTRA="$LDFLAGS_EXTRA -X ${PKG_CONST}.CoreVersion=${VERSION}"
+            fi
+            if grep -R -q -E 'var[[:space:]]+Version\b' constant; then
+              LDFLAGS_EXTRA="$LDFLAGS_EXTRA -X ${PKG_CONST}.Version=${VERSION}"
+            fi
+          fi
           if [ -d cmd/internal/build ]; then
-            if grep -R -q -E 'var[[:space:]]+Version[[:space:]]+string' cmd/internal/build; then
-              add_flag "${PKG_BUILD}.Version" "${VERSION}"
+            if grep -R -q -E 'var[[:space:]]+Version\b' cmd/internal/build; then
+              LDFLAGS_EXTRA="$LDFLAGS_EXTRA -X ${PKG_BUILD}.Version=${VERSION}"
             fi
-            if grep -R -q -E 'var[[:space:]]+(Commit|GitCommit)[[:space:]]+string' cmd/internal/build; then
-              if grep -R -q -E 'var[[:space:]]+Commit[[:space:]]+string' cmd/internal/build; then
-                add_flag "${PKG_BUILD}.Commit" "${SHORT_SHA}"
+            if grep -R -q -E 'var[[:space:]]+(GitCommit|Commit)\b' cmd/internal/build; then
+              if grep -R -q -E 'var[[:space:]]+GitCommit\b' cmd/internal/build; then
+                LDFLAGS_EXTRA="$LDFLAGS_EXTRA -X ${PKG_BUILD}.GitCommit=${SHORT_SHA}"
               else
-                add_flag "${PKG_BUILD}.GitCommit" "${SHORT_SHA}"
+                LDFLAGS_EXTRA="$LDFLAGS_EXTRA -X ${PKG_BUILD}.Commit=${SHORT_SHA}"
               fi
             fi
-            if grep -R -q -E 'var[[:space:]]+(BuildTime|BuildDate)[[:space:]]+string' cmd/internal/build; then
-              BUILD_TIME="$(date -u +%Y-%m-%dT%H:%M:%SZ)"
-              if grep -R -q -E 'var[[:space:]]+BuildTime[[:space:]]+string' cmd/internal/build; then
-                add_flag "${PKG_BUILD}.BuildTime" "${BUILD_TIME}"
+            if grep -R -q -E 'var[[:space:]]+(BuildTime|BuildDate)\b' cmd/internal/build; then
+              BUILD_TS="$(date -u +%Y-%m-%dT%H:%M:%SZ)"
+              if grep -R -q -E 'var[[:space:]]+BuildTime\b' cmd/internal/build; then
+                LDFLAGS_EXTRA="$LDFLAGS_EXTRA -X ${PKG_BUILD}.BuildTime=${BUILD_TS}"
               else
-                add_flag "${PKG_BUILD}.BuildDate" "${BUILD_TIME}"
-              fi
-            fi
-          fi
-          if [ -z "$LDFLAGS_EXTRA" ] && [ -d constant ]; then
-            if grep -R -q -E 'var[[:space:]]+(Version|CoreVersion)[[:space:]]+string' constant; then
-              if grep -R -q -E 'var[[:space:]]+Version[[:space:]]+string' constant; then
-                add_flag "${PKG_CONST}.Version" "${VERSION}"
-              else
-                add_flag "${PKG_CONST}.CoreVersion" "${VERSION}"
+                LDFLAGS_EXTRA="$LDFLAGS_EXTRA -X ${PKG_BUILD}.BuildDate=${BUILD_TS}"
               fi
             fi
           fi
-          echo "LDFLAGS_EXTRA=$LDFLAGS_EXTRA" >> "$GITHUB_ENV"
-          echo "ldflags=$LDFLAGS_EXTRA" >> "$GITHUB_OUTPUT"
-
+          echo "LDFLAGS_EXTRA=${LDFLAGS_EXTRA}" >> "$GITHUB_ENV"
+          echo "ldflags=${LDFLAGS_EXTRA}" >> "$GITHUB_OUTPUT"
       - name: Build sing-box for arm64
         if: steps.decide.outputs.changed == 'true'
         env:
@@ -154,51 +181,50 @@ jobs:
           GOOS: linux
           GOARCH: arm64
         run: |
-          go build -v -o "${OUT}" -trimpath \
-            -ldflags="-s -w ${LDFLAGS_EXTRA}" \
-            -tags="with_quic with_clash_api" \
-            ./cmd/sing-box
-
+          go build -v -o "${OUT}" -trimpath -ldflags="-s -w ${LDFLAGS_EXTRA}" -tags="with_quic with_clash_api" ./cmd/sing-box
+      - name: Package zip
+        if: steps.decide.outputs.changed == 'true'
+        shell: bash
+        run: |
+          install -m 0755 "${OUT}" sing-box
+          zip -9 -j "${ZIP}" sing-box
+          rm -f sing-box
       - name: Generate checksums
         if: steps.decide.outputs.changed == 'true'
         run: |
-          sha256sum "${OUT}" > "${OUT}.sha256"
-
-      - name: Upload Artifact (optional)
+          sha256sum "${ZIP}" > "${ZIP}.sha256"
+      - name: Upload Artifact
         if: steps.decide.outputs.changed == 'true'
         uses: actions/upload-artifact@v4
         with:
-          name: sing-box-minimal-${{ env.VERSION }}-arm64-${{ env.SHORT_SHA }}
+          name: sing-box-minimal-${{ steps.meta.outputs.version }}-arm64-${{ steps.upstream.outputs.short }}-zip
           path: |
-            ${{ env.OUT }}
-            ${{ env.OUT }}.sha256
-
+            ${{ steps.meta.outputs.zip }}
+            ${{ steps.meta.outputs.zip }}.sha256
       - name: Create GitHub Release and upload assets
         if: steps.decide.outputs.changed == 'true'
         uses: softprops/action-gh-release@v2
         with:
-          tag_name: ${{ env.TAG }}
-          name: sing-box minimal ${{ env.VERSION }} (${{ env.SHORT_SHA }})
+          tag_name: ${{ steps.meta.outputs.tag }}
+          name: sing-box minimal ${{ steps.meta.outputs.version }} (${{ steps.upstream.outputs.short }})
           body: |
-            - Source: reF1nd/sing-box @ ${{ env.VERSION }} (${{ env.SHORT_SHA }})
+            - Source: reF1nd/sing-box @ ${{ steps.meta.outputs.version }} (${{ steps.upstream.outputs.short }})
             - GOOS/GOARCH: linux/arm64
             - Tags: with_quic with_clash_api
             - ldflags: ${{ steps.ldflags.outputs.ldflags }}
           prerelease: true
           files: |
-            ${{ env.OUT }}
-            ${{ env.OUT }}.sha256
-
+            ${{ steps.meta.outputs.zip }}
+            ${{ steps.meta.outputs.zip }}.sha256
       - name: Update state and save cache
         if: steps.decide.outputs.changed == 'true'
         shell: bash
         run: |
           mkdir -p "upstream_state/${REF}"
           echo "${UPSTREAM_SHA}" > "upstream_state/${REF}/sha.txt"
-
       - name: Save cache
         if: steps.decide.outputs.changed == 'true'
         uses: actions/cache/save@v3
         with:
-          path: upstream_state/${{ env.REF }}
-          key: singbox-state-${{ env.REF }}-${{ env.UPSTREAM_SHA }}
+          path: upstream_state/${{ steps.prep.outputs.ref }}
+          key: singbox-state-${{ steps.prep.outputs.ref }}-${{ steps.upstream.outputs.sha }}
