--- a/.github/workflows/reF1nd.yml
+++ b/.github/workflows/reF1nd.yml
@@ -71,21 +71,32 @@ jobs:
         id: meta
         run: |
           TAGS="with_quic with_utls with_clash_api"
+
+          # linux/arm64
           OUT="sing-box-linux-arm64-${VERSION}-${SHORT_SHA}"
           ZIP="${OUT}.zip"
+
+          # windows/amd64
+          OUT_WIN64="sing-box-windows-amd64-${VERSION}-${SHORT_SHA}.exe"
+          ZIP_WIN64="sing-box-windows-amd64-${VERSION}-${SHORT_SHA}.zip"
+
           TAG="sing-box-${VERSION}-${SHORT_SHA}"
 
           echo "TAGS=$TAGS" >> $GITHUB_ENV
           echo "OUT=$OUT" >> $GITHUB_ENV
           echo "ZIP=$ZIP" >> $GITHUB_ENV
+          echo "OUT_WIN64=$OUT_WIN64" >> $GITHUB_ENV
+          echo "ZIP_WIN64=$ZIP_WIN64" >> $GITHUB_ENV
           echo "TAG=$TAG" >> $GITHUB_ENV
 
           echo "tags=$TAGS" >> $GITHUB_OUTPUT
           echo "out=$OUT" >> $GITHUB_OUTPUT
           echo "zip=$ZIP" >> $GITHUB_OUTPUT
+          echo "out_win64=$OUT_WIN64" >> $GITHUB_OUTPUT
+          echo "zip_win64=$ZIP_WIN64" >> $GITHUB_OUTPUT
           echo "tag=$TAG" >> $GITHUB_OUTPUT
 
-      - name: Build sing-box (arm64 minimal)
+      - name: Build sing-box (linux arm64 minimal)
         env:
           CGO_ENABLED: 0
           GOOS: linux
@@ -98,17 +109,40 @@ jobs:
             -tags="${TAGS}" \
             ./cmd/sing-box
 
-      - name: Verify arch
-        run: file "${OUT}"
+      - name: Build sing-box (windows amd64 minimal)
+        env:
+          CGO_ENABLED: 0
+          GOOS: windows
+          GOARCH: amd64
+        run: |
+          go build \
+            -trimpath \
+            -o "${OUT_WIN64}" \
+            -ldflags="-s -w -X github.com/sagernet/sing-box/constant.Version=${VERSION}" \
+            -tags="${TAGS}" \
+            ./cmd/sing-box
 
-      - name: Package zip
+      - name: Verify arch
+        run: |
+          file "${OUT}"
+          file "${OUT_WIN64}"
+
+      - name: Package zip (linux)
         run: |
           install -m 0755 "${OUT}" sing-box
           zip -9 -j "${ZIP}" sing-box
-          rm sing-box
+          rm -f sing-box
+
+      - name: Package zip (windows amd64)
+        run: |
+          install -m 0755 "${OUT_WIN64}" sing-box.exe
+          zip -9 -j "${ZIP_WIN64}" sing-box.exe
+          rm -f sing-box.exe
 
       - name: SHA256
-        run: sha256sum "${ZIP}" > "${ZIP}.sha256"
+        run: |
+          sha256sum "${ZIP}" > "${ZIP}.sha256"
+          sha256sum "${ZIP_WIN64}" > "${ZIP_WIN64}.sha256"
 
       - name: Upload artifact
         uses: actions/upload-artifact@v4
@@ -117,6 +151,8 @@ jobs:
           path: |
             ${{ steps.meta.outputs.zip }}
             ${{ steps.meta.outputs.zip }}.sha256
+            ${{ steps.meta.outputs.zip_win64 }}
+            ${{ steps.meta.outputs.zip_win64 }}.sha256
 
       - name: Release
         uses: softprops/action-gh-release@v2
@@ -125,9 +161,11 @@ jobs:
           name: sing-box minimal (${{ steps.upstream.outputs.short }})
           body: |
             Source: reF1nd/sing-box @ ${{ env.VERSION }}
-            GOOS/GOARCH: linux/arm64
+            GOOS/GOARCH: linux/arm64, windows/amd64
             Tags: ${{ steps.meta.outputs.tags }}
           prerelease: true
           files: |
             ${{ steps.meta.outputs.zip }}
             ${{ steps.meta.outputs.zip }}.sha256
+            ${{ steps.meta.outputs.zip_win64 }}
+            ${{ steps.meta.outputs.zip_win64 }}.sha256
